style: Style home section
Lines 38-215 in style.css

--- a/index.html
+++ b/index.html
@@ -1,26 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Luis Cárcamo - Web Developer</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Source+Code+Pro&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/a7717bed62.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-  <nav class="hamb-nav">
+  <nav>
     <img src="./img/logo-branco.png" alt="logo Luis Cárcamo">
     <a href="">
       <i class="fa-solid fa-bars"></i>
     </a>
   </nav>
-  <header>
-
-  </header>
   <div class="page-content">
     <section class="home-container">
-
+      <hr class="bg-line-01">
+      <hr class="bg-line-02">
+      <div class="lang-container">
+        <p id="lang-active"><strong>ENG-US</strong></p>
+        <ul class="languages">
+          <li id="lang-eng">
+            <img src="./img/languages/united-states.png" alt="English United States">
+            <span>ENG-US</span>
+          </li>
+          <li id="lang-pt">
+            <img src="./img/languages/brazil.png" alt="Português Brasil">
+            <span>PT-BR</span>
+          </li>
+          <li id="lang-esp">
+            <img src="./img/languages/peru.png" alt="Español Perú">
+            <span>ESP-PE</span>
+          </li>
+        </ul>
+      </div>
+      <div class="home-text">
+        <p>Hi, my name is</p>
+        <h1>Luis Enrique Cárcamo</h1>
+        <p>Web Developer - <strong>Front End</strong> </p>
+      </div>
+      <div class="profile-circle-01">
+        <div class="profile-circle-02">
+          <img class="profile-pic" src="./img/profile.jpg" alt="profile picture">
+        </div>
+      </div>
+      <div class="guide-signs home-scroll-sign">
+        <p>scroll</p>
+        <i class="fa-solid fa-arrow-down"></i>
+      </div>
     </section>
     <section class="about-container">
 
@@ -33,4 +68,5 @@
     </section>
   </div>
 </body>
+
 </html>
