html: Write most of HTML content for scrolling test

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </li>
         </ul>
       </div>
-      <div class="home-text">
+      <div class="section-text home-text">
         <p>Hi, my name is</p>
         <h1>Luis Enrique Cárcamo</h1>
         <p>Web Developer - <strong>Front End</strong> </p>
@@ -58,13 +58,61 @@
       </div>
     </section>
     <section class="about-container">
-
+      <h2>About me</h2>
+      <div class="about-text">
+        <p>Born in Lima, Peru, and living in São Paulo, Brazil, since 2012. I've studied and worked as a
+          <a href="" id="about-musician" class="about-anchor">
+            musician
+          </a>,
+          <a href="" id="about-musician" class="about-anchor">
+            illustrator
+          </a>,
+          <a href="" id="about-musician" class="about-anchor">
+            language teacher
+          </a> and
+          <a href="" id="about-musician" class="about-anchor">
+            web developer
+          </a>.
+        </p>
+        <p>For the last couple of years I've had the opportunity to work both independently and with teams of
+          collaborators.</p>
+        <p>Currently, I'm acting mainly as a Front End Web Developer, all the way from designing a responsive layout, to
+          deploying a fully functional, interactive and intuitive web application.</p>
+      </div>
+      <p class="bg-text">About</p>
     </section>
     <section class="portfolio-container">
-
+      <h2>Portfolio</h2>
+      <div class="portfolio-text section-text">
+        <p>
+          Take a look at some of my most recent projects with links to their respective <strong>GitHub</strong>
+          repositories and deployed web pages. Feel free to navigate them and <strong>let met know</strong> what you
+          think!
+        </p>
+      </div>
+      <p class="bg-text">Portfolio</p>
     </section>
     <section class="contact-container">
-
+      <h2>Contact me</h2>
+      <div class="contact-text section-text">
+        <p>
+          Do you feel like I would be a nice addition to your <strong>team of developers</strong>? Let's talk about it!
+        </p>
+        <p>
+          Do you need a web page for your <strong>business</strong> or would like to update the one you currently have?
+          Call me up!
+        </p>
+        <p>
+          Are you a developer looking to collaborate on an exciting <strong>new project</strong>? Definitely contact me!
+        </p>
+      </div>
+      <form action="">
+        <input type="email" name="email" id="email" placeholder="Email">
+        <input type="text" name="subject" id="subject" placeholder="Subject">
+        <textarea name="email-message" id="email-message" cols="30" rows="10" placeholder="Message"></textarea>
+        <button type="submit">Send</button>
+      </form>
+      <p class="bg-text">Contact</p>
     </section>
   </div>
 </body>
