style: Style navigation modal
Lines 24-50 in index.html and 50-107 on style.css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,33 @@
       <i class="fa-solid fa-bars"></i>
     </a>
   </nav>
+  <div class="nav-modal-container">
+    <ul>
+      <li><button>
+        <i class="fa-solid fa-address-card"></i>
+        About
+      </button></li>
+      <li><button>
+        <i class="fa-solid fa-pen-to-square"></i>
+        Skills
+      </button></li>
+      <li><button class="nav-modal-active">
+        <i class="fa-regular fa-window-restore nav-modal-active"></i>
+        Portfolio
+      </button></li>
+      <li><button>
+        <i class="fa-solid fa-envelope"></i>
+        Contact
+      </button></li>
+    </ul>
+    <div class="credits">
+      <p>Developed by Luis Cárcamo</p>
+      <div class="credits-icons">
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-linkedin"></i>
+      </div>
+    </div>
+  </div>
   <div class="page-content">
     <section class="home-container">
       <hr class="bg-line-01">
@@ -62,17 +89,13 @@
       <div class="about-text">
         <p>Born in Lima, Peru, and living in São Paulo, Brazil, since 2012. I've studied and worked as a
           <a href="" id="about-musician" class="about-anchor">
-            musician
-          </a>,
+            musician</a>,
           <a href="" id="about-musician" class="about-anchor">
-            illustrator
-          </a>,
+            illustrator</a>,
           <a href="" id="about-musician" class="about-anchor">
-            language teacher
-          </a> and
+            language teacher</a> and
           <a href="" id="about-musician" class="about-anchor">
-            web developer
-          </a>.
+            web developer</a>.
         </p>
         <p>For the last couple of years I've had the opportunity to work both independently and with teams of
           collaborators.</p>
