style: Style About Me section
Lines 292-381 in style.css

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
   </div>
   <div class="page-content">
-    <section class="home-container">
+    <section id="home" class="home-container">
       <hr class="bg-line-01">
       <hr class="bg-line-02">
       <div class="lang-container">
@@ -84,9 +84,9 @@
         <i class="fa-solid fa-arrow-down"></i>
       </div>
     </section>
-    <section class="about-container">
+    <section id="about" class="about-container">
       <h2>About me</h2>
-      <div class="about-text">
+      <div class="about-text section-text">
         <p>Born in Lima, Peru, and living in São Paulo, Brazil, since 2012. I've studied and worked as a
           <a href="" id="about-musician" class="about-anchor">
             musician</a>,
@@ -99,10 +99,36 @@
         </p>
         <p>For the last couple of years I've had the opportunity to work both independently and with teams of
           collaborators.</p>
-        <p>Currently, I'm acting mainly as a Front End Web Developer, all the way from designing a responsive layout, to
-          deploying a fully functional, interactive and intuitive web application.</p>
+        <p>Currently, I'm acting mainly as a Front End Web Developer, all the way from designing responsive layouts, to deploying fully functional, interactive and intuitive web applications.</p>
       </div>
-      <p class="bg-text">About</p>
+      <div class="about-grid">
+        <div class="about-grid-01">
+          <img src="./img/about-me/01.musician-250w.jpg" alt="Musician" class="about-img-active">
+        </div>
+        <div class="about-grid-02">
+          <img src="./img/about-me/02.ilustrator-250w.jpg" alt="Illustrator">
+        </div>
+        <div class="about-grid-03">
+          <img src="./img/about-me/03.developer-250w.jpg" alt="Web Developer">
+        </div>
+        <div class="about-grid-04">
+          <img src="./img/about-me/04.teacher-250w.jpg" alt="Language teacher">
+        </div>
+      </div>
+      <div class="bg-text">
+        <p>About</p>
+      </div>
+    </section>
+    <section class="skills-container">
+      <h2>Skills</h2>
+      <div class="skills-text section-text">
+        <p>
+          Take a look at some of my most recent projects with links to their respective <strong>GitHub</strong>
+          repositories and deployed web pages. Feel free to navigate them and <strong>let met know</strong> what you
+          think!
+        </p>
+      </div>
+      <p class="bg-text">Skills</p>
     </section>
     <section class="portfolio-container">
       <h2>Portfolio</h2>
