--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
   <div class="nav-modal-container">
     <ul>
       <li><button>
-        <i class="fa-solid fa-address-card"></i>
-        About
-      </button></li>
+          <i class="fa-solid fa-address-card"></i>
+          About
+        </button></li>
       <li><button>
-        <i class="fa-solid fa-pen-to-square"></i>
-        Skills
-      </button></li>
+          <i class="fa-solid fa-pen-to-square"></i>
+          Skills
+        </button></li>
       <li><button class="nav-modal-active">
-        <i class="fa-regular fa-window-restore nav-modal-active"></i>
-        Portfolio
-      </button></li>
+          <i class="fa-regular fa-window-restore nav-modal-active"></i>
+          Portfolio
+        </button></li>
       <li><button>
-        <i class="fa-solid fa-envelope"></i>
-        Contact
-      </button></li>
+          <i class="fa-solid fa-envelope"></i>
+          Contact
+        </button></li>
     </ul>
     <div class="credits">
       <p>Developed by Luis Cárcamo</p>
@@ -99,7 +99,8 @@
         </p>
         <p>For the last couple of years I've had the opportunity to work both independently and with teams of
           collaborators.</p>
-        <p>Currently, I'm acting mainly as a Front End Web Developer, all the way from designing responsive layouts, to deploying fully functional, interactive and intuitive web applications.</p>
+        <p>Currently, I'm acting mainly as a Front End Web Developer, all the way from designing responsive layouts, to
+          deploying fully functional, interactive and intuitive web applications.</p>
       </div>
       <div class="about-grid">
         <div class="about-grid-01">
@@ -119,18 +120,75 @@
         <p>About</p>
       </div>
     </section>
-    <section class="skills-container">
-      <h2>Skills</h2>
-      <div class="skills-text section-text">
-        <p>
-          Take a look at some of my most recent projects with links to their respective <strong>GitHub</strong>
-          repositories and deployed web pages. Feel free to navigate them and <strong>let met know</strong> what you
-          think!
-        </p>
+    <section id="skills" class="skills-container">
+      <div class="skills-header">
+        <h2>Skills</h2>
+        <i class="fa-solid fa-pen-to-square"></i>
       </div>
-      <p class="bg-text">Skills</p>
+      <div class="skills-card-container">
+        <div class="card">
+          <div class="card-front">
+            <h3>Front End</h3>
+          </div>
+          <div class="card-back">
+            <h4>Front End</h4>
+            <ul>
+              <li>HTML5 + CSS3</li>
+              <li>JavaScript</li>
+              <li>ReactJS</li>
+              <li>Jest</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card card-active">
+          <div class="card-front">
+            <h3>Back End</h3>
+          </div>
+          <div class="card-back">
+            <h4>Back End</h4>
+            <ul>
+              <li>NodeJS</li>
+              <li>Express</li>
+              <li>MySQL</li>
+              <li>Squelize</li>
+              <li>API REST</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-front">
+            <h3>Languages</h3>
+          </div>
+          <div class="card-back">
+            <h4>Languages</h4>
+            <ul>
+              <li>Spanish (native)</li>
+              <li>English (fluent)</li>
+              <li>Portuguese (fluent)</li>
+              <li>French (basic)</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-front">
+            <h3>Soft Skills</h3>
+          </div>
+          <div class="card-back">
+            <h4>Soft Skills</h4>
+            <ul>
+              <li>Creativity</li>
+              <li>Time Management</li>
+              <li>Problem Solving</li>
+              <li>Conflict Resolution</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="bg-text">
+        <p>Skills</p>
+      </div>
     </section>
-    <section class="portfolio-container">
+    <section id="portfolio" class="portfolio-container">
       <h2>Portfolio</h2>
       <div class="portfolio-text section-text">
         <p>
@@ -139,9 +197,11 @@
           think!
         </p>
       </div>
-      <p class="bg-text">Portfolio</p>
+      <div class="bg-text">
+        <p>Portfolio</p>
+      </div>
     </section>
-    <section class="contact-container">
+    <section id="contact" class="contact-container">
       <h2>Contact me</h2>
       <div class="contact-text section-text">
         <p>
@@ -161,7 +221,9 @@
         <textarea name="email-message" id="email-message" cols="30" rows="10" placeholder="Message"></textarea>
         <button type="submit">Send</button>
       </form>
-      <p class="bg-text">Contact</p>
+      <div class="bg-text">
+        <p>Contact</p>
+      </div>
     </section>
   </div>
 </body>
