--- a/index.html
+++ b/index.html
@@ -197,6 +197,20 @@
           think!
         </p>
       </div>
+      <ul class="portfolio-projects-container">
+        <li class="project-container">
+          <img src="./img/portfolio/cl73.jpg" alt="Café Lima 73 image">
+          <h3>Café Lima 73</h3>
+        </li>
+        <li class="project-container">
+          <img src="./img/portfolio/tv-plus.jpg" alt="TV + image">
+          <h3>TV+</h3>
+        </li>
+        <li class="project-container project-active">
+          <img src="./img/portfolio/kings-lockdown.jpg" alt="King's Lockdown image">
+          <h3>King's Lockdown</h3>
+        </li>
+      </ul>
       <div class="bg-text">
         <p>Portfolio</p>
       </div>
