fix: Add click sign to Skills section
Lines 128-131 on index.html and 400-422 on style.css

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
         <h2>Skills</h2>
         <i class="fa-solid fa-pen-to-square"></i>
       </div>
+      <div class="guide-signs skills-click-sign">
+        <p>click</p>
+        <i class="fa-solid fa-arrow-down"></i>
+      </div>
       <div class="skills-card-container">
         <div class="card">
           <div class="card-front">
