--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Luis Cárcamo - Web Developer</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Source+Code+Pro&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Source+Code+Pro&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/a7717bed62.js" crossorigin="anonymous"></script>
@@ -45,6 +45,33 @@
       <div class="credits-icons">
         <i class="fa-brands fa-github"></i>
         <i class="fa-brands fa-linkedin"></i>
+      </div>
+    </div>
+  </div>
+  <div class="portfolio-modal-container">
+    <div class="portfolio-modal-bg">
+      <h3>King's Lockdown</h3>
+      <i class="fa-solid fa-circle-xmark"></i>
+      <div class="project-text">
+        <p>SPA developed to showcase drummer Oscar Barcelli's album King's Lockdown (2021) for Best Latin Jazz Album
+          consideration for the Latin Grammy Awards.</p>
+      </div>
+      <video src="./img/portfolio/kings-lockdown.mp4" autoplay loop>
+        Your browser does not support the video tag
+      </video>
+      <div class="portfolio-nav">
+        <div class="prev-project">
+          <i class="fa-solid fa-circle-chevron-left"></i>
+          <p>Prev</p>
+        </div>
+        <div class="next-project">
+          <i class="fa-solid fa-circle-chevron-right"></i>
+          <p>Next</p>
+        </div>
+      </div>
+      <div class="project-links">
+        <a href="">Website</a>
+        <a href="">Repository</a>
       </div>
     </div>
   </div>
