fix: Change div.page-content for main tag in inedx.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </div>
   </div>
-  <div class="page-content">
+  <main>
     <section id="home" class="home-container">
       <hr class="bg-line-01">
       <hr class="bg-line-02">
@@ -270,7 +270,7 @@
         <p>Contact</p>
       </div>
     </section>
-  </div>
+  </main>
 </body>
 
 </html>
