style: Add and style footer element
Lines 274-280 on index.html and 702-725 on style.css

--- a/index.html
+++ b/index.html
@@ -271,6 +271,13 @@
       </div>
     </section>
   </main>
+  <footer>
+    <p>Developed by Luis Cárcamo</p>
+    <div class="credits-icons">
+      <i class="fa-brands fa-github"></i>
+      <i class="fa-brands fa-linkedin"></i>
+    </div>
+  </footer>
 </body>
 
 </html>
