feat: Scroll to sections with Mobile NavBar
Lines 26-71 on script.js

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
   </nav>
   <div class="nav-modal-container">
     <ul>
-      <li><button>
-          <i class="fa-solid fa-address-card"></i>
+      <li><button class="nav-modal-btn">
+          <i class="fa-solid fa-address-card nav-modal-icon"></i>
           About
         </button></li>
-      <li><button>
-          <i class="fa-solid fa-pen-to-square"></i>
+      <li><button class="nav-modal-btn">
+          <i class="fa-solid fa-pen-to-square nav-modal-icon"></i>
           Skills
         </button></li>
-      <li><button class="nav-modal-active">
-          <i class="fa-regular fa-window-restore nav-modal-active"></i>
+      <li><button class="nav-modal-btn">
+          <i class="fa-regular fa-window-restore nav-modal-icon"></i>
           Portfolio
         </button></li>
-      <li><button>
-          <i class="fa-solid fa-envelope"></i>
+      <li><button class="nav-modal-btn">
+          <i class="fa-solid fa-envelope nav-modal-icon"></i>
           Contact
         </button></li>
     </ul>
