feat: Show/hide language options
Lines 73-87 on script.js

--- a/index.html
+++ b/index.html
@@ -82,20 +82,22 @@
       <hr class="bg-line-02">
       <div class="lang-container">
         <p id="lang-active"><strong>ENG-US</strong></p>
-        <ul class="languages">
-          <li id="lang-eng">
-            <img src="./img/languages/united-states.png" alt="English United States">
-            <span>ENG-US</span>
-          </li>
-          <li id="lang-pt">
-            <img src="./img/languages/brazil.png" alt="Português Brasil">
-            <span>PT-BR</span>
-          </li>
-          <li id="lang-esp">
-            <img src="./img/languages/peru.png" alt="Español Perú">
-            <span>ESP-PE</span>
-          </li>
-        </ul>
+        <div class="languages">
+          <ul class="">
+            <!-- <li id="lang-eng">
+              <img src="./img/languages/united-states.png" alt="English United States">
+              <span>ENG-US</span>
+            </li> -->
+            <li id="lang-pt">
+              <img src="./img/languages/brazil.png" alt="Português Brasil">
+              <span>PT-BR</span>
+            </li>
+            <li id="lang-esp">
+              <img src="./img/languages/peru.png" alt="Español Perú">
+              <span>ESP-PE</span>
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="section-text home-text">
         <p>Hi, my name is</p>
