fix: Change language options to anchor tags
Lines 92-101 on index.html

--- a/index.html
+++ b/index.html
@@ -89,12 +89,16 @@
               <span>ENG-US</span>
             </li> -->
             <li id="lang-pt">
-              <img src="./img/languages/brazil.png" alt="Português Brasil">
-              <span>PT-BR</span>
+              <a href="">
+                <img src="./img/languages/brazil.png" alt="Português Brasil">
+                <span>PT-BR</span>
+              </a>
             </li>
             <li id="lang-esp">
-              <img src="./img/languages/peru.png" alt="Español Perú">
-              <span>ESP-PE</span>
+              <a href="">
+                <img src="./img/languages/peru.png" alt="Español Perú">
+                <span>ESP-PE</span>
+              </a>
             </li>
           </ul>
         </div>
