feat: Focus 'About me' grid images
Lines 89-123 on script.js

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
       <h2>About me</h2>
       <div class="about-text section-text">
         <p>Born in Lima, Peru, and living in São Paulo, Brazil, since 2012. I've studied and worked as a
-          <a href="" id="about-musician" class="about-anchor">
+          <a href="" id="musician" class="about-anchor active">
             musician</a>,
-          <a href="" id="about-musician" class="about-anchor">
+          <a href="" id="illustrator" class="about-anchor">
             illustrator</a>,
-          <a href="" id="about-musician" class="about-anchor">
+          <a href="" id="teacher" class="about-anchor">
             language teacher</a> and
-          <a href="" id="about-musician" class="about-anchor">
+          <a href="" id="developer" class="about-anchor">
             web developer</a>.
         </p>
         <p>For the last couple of years I've had the opportunity to work both independently and with teams of
@@ -137,17 +137,17 @@
           deploying fully functional, interactive and intuitive web applications.</p>
       </div>
       <div class="about-grid">
-        <div class="about-grid-01">
-          <img src="./img/about-me/01.musician-250w.jpg" alt="Musician" class="about-img-active">
+        <div>
+          <img src="./img/about-me/01.musician-250w.jpg" id="img-musician" alt="Musician" class="about-img-active">
         </div>
-        <div class="about-grid-02">
-          <img src="./img/about-me/02.ilustrator-250w.jpg" alt="Illustrator">
+        <div>
+          <img src="./img/about-me/02.ilustrator-250w.jpg" id="img-illustrator" alt="Illustrator">
         </div>
-        <div class="about-grid-03">
-          <img src="./img/about-me/03.developer-250w.jpg" alt="Web Developer">
+        <div>
+          <img src="./img/about-me/03.developer-250w.jpg" id="img-developer" alt="Web Developer">
         </div>
-        <div class="about-grid-04">
-          <img src="./img/about-me/04.teacher-250w.jpg" alt="Language teacher">
+        <div>
+          <img src="./img/about-me/04.teacher-250w.jpg" id="img-teacher" alt="Language teacher">
         </div>
       </div>
       <div class="bg-text">
