feat: Toggle Skills cards and icon
Lines 124-161 on script.js

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <i class="fa-solid fa-arrow-down"></i>
       </div>
       <div class="skills-card-container">
-        <div class="card">
+        <div id="frontEnd" class="card">
           <div class="card-front">
             <h3>Front End</h3>
           </div>
@@ -178,7 +178,7 @@
             </ul>
           </div>
         </div>
-        <div class="card card-active">
+        <div id="backEnd" class="card">
           <div class="card-front">
             <h3>Back End</h3>
           </div>
@@ -193,7 +193,7 @@
             </ul>
           </div>
         </div>
-        <div class="card">
+        <div id="languages" class="card">
           <div class="card-front">
             <h3>Languages</h3>
           </div>
@@ -207,7 +207,7 @@
             </ul>
           </div>
         </div>
-        <div class="card">
+        <div id="softSkills" class="card">
           <div class="card-front">
             <h3>Soft Skills</h3>
           </div>
