--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
   </div>
   <div class="portfolio-modal-container">
     <div class="portfolio-modal-bg">
-      <h3>King's Lockdown</h3>
+      <h3>Title</h3>
       <i class="fa-solid fa-circle-xmark"></i>
       <div class="project-text">
-        <p>SPA developed to showcase drummer Oscar Barcelli's album King's Lockdown (2021) for Best Latin Jazz Album
-          consideration for the Latin Grammy Awards.</p>
+        <p>Description</p>
       </div>
       <video src="./img/portfolio/kings-lockdown.mp4" autoplay loop>
         Your browser does not support the video tag
@@ -236,15 +235,15 @@
         </p>
       </div>
       <ul class="portfolio-projects-container">
-        <li class="project-container">
+        <li id="cl73" class="project-container">
           <img src="./img/portfolio/cl73.jpg" alt="Café Lima 73 image">
           <h3>Café Lima 73</h3>
         </li>
-        <li class="project-container">
+        <li id="tvPlus" class="project-container">
           <img src="./img/portfolio/tv-plus.jpg" alt="TV + image">
           <h3>TV+</h3>
         </li>
-        <li class="project-container project-active">
+        <li id="kingsLockdown" class="project-container project-active">
           <img src="./img/portfolio/kings-lockdown.jpg" alt="King's Lockdown image">
           <h3>King's Lockdown</h3>
         </li>
