feat: Send emails with FormSubmit.co
Updated lines 263-273 on index.html

--- a/index.html
+++ b/index.html
@@ -266,10 +266,11 @@
           Are you a developer looking to collaborate on an exciting <strong>new project</strong>? Definitely contact me!
         </p>
       </div>
-      <form action="">
-        <input type="email" name="email" id="email" placeholder="Email">
-        <input type="text" name="subject" id="subject" placeholder="Subject">
-        <textarea name="email-message" id="email-message" cols="30" rows="10" placeholder="Message"></textarea>
+      <form action="https://formsubmit.co/d040fa0799e54ff6f28ed5275e48dbfa" method="POST">
+        <input type="hidden" name="_next" value="https://github.com/LuisECL">
+        <input type="email" name="email" id="email" placeholder="Your email address">
+        <input type="hidden" name="_subject" value="Portfolio page contact message!">
+        <textarea name="message" id="email-message" cols="30" rows="10" placeholder="Your message"></textarea>
         <button type="submit">Send</button>
       </form>
       <div class="bg-text">
