feat/style: Fix credits icons style and added links to them

--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
     <div class="credits">
       <p>Developed by Luis Cárcamo</p>
       <div class="credits-icons">
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-linkedin"></i>
+        <a href="https://www.instagram.com/luch094.jpg/" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://github.com/LuisECL/" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/lecarcamol/" target="_blank">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
     </div>
   </div>
@@ -281,8 +288,15 @@
   <footer>
     <p>Developed by Luis Cárcamo</p>
     <div class="credits-icons">
-      <i class="fa-brands fa-github"></i>
-      <i class="fa-brands fa-linkedin"></i>
+      <a href="https://www.instagram.com/luch094.jpg/" target="_blank">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="https://github.com/LuisECL/" target="_blank">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/lecarcamol/" target="_blank">
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
     </div>
   </footer>
 </body>
