style: Fix About section responsiveness
Tested on all mobile devices in Chrome Dev Tools

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <body>
   <nav>
     <img src="./img/logo-branco.png" alt="logo Luis Cárcamo">
+    <div class="nav-title">
+      <h4>Luis Cárcamo</h4>
+      <p>Web Developer</p>
+    </div>
     <a href="">
       <i class="fa-solid fa-bars"></i>
     </a>
@@ -275,7 +279,7 @@
       </div>
       <form action="https://formsubmit.co/d040fa0799e54ff6f28ed5275e48dbfa" method="POST">
         <input type="hidden" name="_next" value="https://github.com/LuisECL">
-        <input type="email" name="email" id="email" placeholder="Your email address">
+        <input type="email" name="email" id="email" placeholder="Email address">
         <input type="hidden" name="_subject" value="Portfolio page contact message!">
         <textarea name="message" id="email-message" cols="30" rows="10" placeholder="Your message"></textarea>
         <button type="submit">Send</button>
