--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         </p>
       </div>
       <ul class="portfolio-projects-container">
-        <li id="cl73" class="project-container">
+        <!-- <li id="cl73" class="project-container">
           <img src="./img/portfolio/cl73.jpg" alt="Café Lima 73 image">
           <h3>Café Lima 73</h3>
         </li>
@@ -257,7 +257,7 @@
         <li id="kingsLockdown" class="project-container project-active">
           <img src="./img/portfolio/kings-lockdown.jpg" alt="King's Lockdown image">
           <h3>King's Lockdown</h3>
-        </li>
+        </li> -->
       </ul>
       <div class="bg-text">
         <p>Portfolio</p>
