--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Source+Code+Pro&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="media-queries.css">
   <script src="https://kit.fontawesome.com/a7717bed62.js" crossorigin="anonymous"></script>
   <script src="script.js" defer></script>
 </head>
