style: Add media query for vertical tablet view

--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
         <p>scroll</p>
         <i class="fa-solid fa-arrow-down"></i>
       </div>
+      <div class="guide-signs home-scroll-sign">
+        <p>scroll</p>
+        <i class="fa-solid fa-arrow-down"></i>
+      </div>
     </section>
     <section id="about" class="about-container">
       <h2>About me</h2>
@@ -279,7 +283,7 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="credits">
     <p>Developed by Luis Cárcamo</p>
     <div class="credits-icons">
       <a href="https://www.instagram.com/luch094.jpg/" target="_blank">
