style: Add media query for horizontal tablet view

--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
     <a href="">
       <i class="fa-solid fa-bars"></i>
     </a>
+    <ul class="nav-btns">
+      <li><button class="active">
+        <i class="fa-solid fa-address-card nav-modal-icon active"></i>
+        About
+      </button></li>
+    <li><button>
+        <i class="fa-solid fa-pen-to-square nav-modal-icon"></i>
+        Skills
+      </button></li>
+    <li><button>
+        <i class="fa-regular fa-window-restore nav-modal-icon"></i>
+        Portfolio
+      </button></li>
+    <li><button>
+        <i class="fa-solid fa-envelope nav-modal-icon"></i>
+        Contact
+      </button></li>
+    </ul>
   </nav>
   <div class="nav-modal-container">
     <ul>
@@ -250,8 +268,12 @@
           think!
         </p>
       </div>
+      <div class="guide-signs portfolio-click-sign">
+        <p>click</p>
+        <i class="fa-solid fa-arrow-down"></i>
+      </div>
       <ul class="portfolio-projects-container">
-
+        <!-- Projects are inserted here -->
       </ul>
       <div class="bg-text">
         <p>Portfolio</p>
