feat: Style fixed NavBar on scroll
Lines 94-140 on script.js

--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
       <i class="fa-solid fa-bars"></i>
     </a>
     <ul class="nav-btns">
-      <li><button class="active">
-        <i class="fa-solid fa-address-card nav-modal-icon active"></i>
-        About
-      </button></li>
-    <li><button>
-        <i class="fa-solid fa-pen-to-square nav-modal-icon"></i>
-        Skills
-      </button></li>
-    <li><button>
-        <i class="fa-regular fa-window-restore nav-modal-icon"></i>
-        Portfolio
-      </button></li>
-    <li><button>
-        <i class="fa-solid fa-envelope nav-modal-icon"></i>
-        Contact
-      </button></li>
+      <li><button id="about-nav-btn">
+          <i class="fa-solid fa-address-card nav-modal-icon"></i>
+          About
+        </button></li>
+      <li><button id="skills-nav-btn">
+          <i class="fa-solid fa-pen-to-square nav-modal-icon"></i>
+          Skills
+        </button></li>
+      <li><button id="portfolio-nav-btn">
+          <i class="fa-regular fa-window-restore nav-modal-icon"></i>
+          Portfolio
+        </button></li>
+      <li><button id="contact-nav-btn">
+          <i class="fa-solid fa-envelope nav-modal-icon"></i>
+          Contact
+        </button></li>
     </ul>
   </nav>
   <div class="nav-modal-container">
