update: Change website links for tvPlus and kingsLockdown
Lines 284 and 293 on script.js

--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
           Contact
         </button></li>
     </ul>
+    <div class="credits">
+      <div class="credits-icons">
+        <a href="https://www.instagram.com/luch094.jpg/" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://github.com/LuisECL/" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/lecarcamol/" target="_blank">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
+      </div>
+    </div>
   </nav>
   <div class="nav-modal-container">
     <ul>
@@ -300,6 +313,10 @@
         <textarea name="message" id="email-message" cols="30" rows="10" placeholder="Your message"></textarea>
         <button type="submit">Send</button>
       </form>
+      <div class="guide-signs contact-click-sign">
+        <i class="fa-solid fa-arrow-left"></i>
+        <p>You can also check out my social media!</p>
+      </div>
       <div class="bg-text">
         <p>Contact</p>
       </div>
