files: index-pt.html, style-pt.css and script-pt.js files created

--- a/index-pt.html
+++ b/index-pt.html
@@ -10,10 +10,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Source+Code+Pro&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-pt.css">
   <link rel="stylesheet" href="media-queries.css">
   <script src="https://kit.fontawesome.com/a7717bed62.js" crossorigin="anonymous"></script>
-  <script src="script.js" defer></script>
+  <script src="script-pt.js" defer></script>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <img src="./img/logo-branco.png" alt="logo Luis Cárcamo">
     <div class="nav-title">
       <h4>Luis Cárcamo</h4>
-      <p>Web Developer</p>
+      <p>Desenvolvedor Web</p>
     </div>
     <a href="">
       <i class="fa-solid fa-bars"></i>
@@ -29,11 +29,11 @@
     <ul class="nav-btns">
       <li><button id="about-nav-btn">
           <i class="fa-solid fa-address-card nav-modal-icon"></i>
-          About
+          Sobre
         </button></li>
       <li><button id="skills-nav-btn">
           <i class="fa-solid fa-pen-to-square nav-modal-icon"></i>
-          Skills
+          Habilidades
         </button></li>
       <li><button id="portfolio-nav-btn">
           <i class="fa-regular fa-window-restore nav-modal-icon"></i>
@@ -41,7 +41,7 @@
         </button></li>
       <li><button id="contact-nav-btn">
           <i class="fa-solid fa-envelope nav-modal-icon"></i>
-          Contact
+          Contato
         </button></li>
     </ul>
     <div class="credits">
@@ -62,11 +62,11 @@
     <ul>
       <li><button class="nav-modal-btn">
           <i class="fa-solid fa-address-card nav-modal-icon"></i>
-          About
+          Sobre
         </button></li>
       <li><button class="nav-modal-btn">
           <i class="fa-solid fa-pen-to-square nav-modal-icon"></i>
-          Skills
+          Habilidades
         </button></li>
       <li><button class="nav-modal-btn">
           <i class="fa-regular fa-window-restore nav-modal-icon"></i>
@@ -74,11 +74,11 @@
         </button></li>
       <li><button class="nav-modal-btn">
           <i class="fa-solid fa-envelope nav-modal-icon"></i>
-          Contact
+          Contato
         </button></li>
     </ul>
     <div class="credits">
-      <p>Developed by Luis Cárcamo</p>
+      <p>Desenvolvido por Luis Cárcamo</p>
       <div class="credits-icons">
         <a href="https://www.instagram.com/luch094.jpg/" target="_blank">
           <i class="fa-brands fa-instagram"></i>
@@ -100,21 +100,21 @@
         <p>Description</p>
       </div>
       <video src="./img/portfolio/kings-lockdown.mp4" autoplay loop>
-        Your browser does not support the video tag
+        Seu navegador não suporta a tag de vídeo
       </video>
       <div class="portfolio-nav">
         <div class="prev-project">
           <i class="fa-solid fa-circle-chevron-left"></i>
-          <p>Prev</p>
+          <p>Ant</p>
         </div>
         <div class="next-project">
           <i class="fa-solid fa-circle-chevron-right"></i>
-          <p>Next</p>
+          <p>Seg</p>
         </div>
       </div>
       <div class="project-links">
-        <a href="">Website</a>
-        <a href="">Repository</a>
+        <a href="">Site</a>
+        <a href="">Repositório</a>
       </div>
     </div>
   </div>
@@ -123,19 +123,21 @@
       <hr class="bg-line-01">
       <hr class="bg-line-02">
       <div class="lang-container">
-        <p id="lang-active"><strong>ENG-US</strong></p>
+        <p id="lang-active"><strong>PT-BR</strong></p>
         <div class="languages">
           <ul class="">
-            <!-- <li id="lang-eng">
-              <img src="./img/languages/united-states.png" alt="English United States">
-              <span>ENG-US</span>
-            </li> -->
-            <li id="lang-pt">
-              <a href="index-pt.html">
+            <li id="lang-eng">
+              <a href="index.html">
+                <img src="./img/languages/united-states.png" alt="English United States">
+                <span>ENG-US</span>
+              </a>
+            </li>
+            <!-- <li id="lang-pt">
+              <a href="">
                 <img src="./img/languages/brazil.png" alt="Português Brasil">
                 <span>PT-BR</span>
               </a>
-            </li>
+            </li> -->
             <li id="lang-esp">
               <a href="">
                 <img src="./img/languages/peru.png" alt="Español Perú">
@@ -146,9 +148,9 @@
         </div>
       </div>
       <div class="section-text home-text">
-        <p>Hi, my name is</p>
+        <p>Oi, meu nome é</p>
         <h1>Luis Enrique Cárcamo</h1>
-        <p>Web Developer - <strong>Front End</strong> </p>
+        <p>Desenvolvedor Web - <strong>Front End</strong> </p>
       </div>
       <div class="profile-circle-01">
         <div class="profile-circle-02">
@@ -156,29 +158,29 @@
         </div>
       </div>
       <div class="guide-signs home-scroll-sign">
-        <p>scroll</p>
+        <p>desce</p>
         <i class="fa-solid fa-arrow-down"></i>
       </div>
       <div class="guide-signs home-scroll-sign">
-        <p>scroll</p>
+        <p>desce</p>
         <i class="fa-solid fa-arrow-down"></i>
       </div>
     </section>
     <section id="about" class="about-container">
-      <h2>About me</h2>
+      <h2>Sobre mim</h2>
       <div class="about-text section-text">
-        <p>Born in Lima, Peru, and living in São Paulo, Brazil, since 2012. I've studied and worked as a
+        <p>Nascido em Lima, Perú, e morando em São Paulo, Brazil, desde 2012. Tenho estudado e trabalhado como
           <a href="" id="musician" class="about-anchor active">
-            musician</a>,
+            músico</a>,
           <a href="" id="illustrator" class="about-anchor">
-            illustrator</a>,
+            ilustrador</a>,
           <a href="" id="teacher" class="about-anchor">
-            language teacher</a> and
+            professor de línguas</a> e
           <a href="" id="developer" class="about-anchor">
-            web developer</a>.
+            desenvolvedor web</a>.
         </p>
-        <p>For the last couple of years I've had the opportunity to work both independently and with teams of collaborators.</p>
-        <p>Currently, I'm acting mainly as a Front End Web Developer, all the way from designing responsive layouts, to deploying fully functional, interactive and intuitive web applications.</p>
+        <p>Nos últimos anos tive a oportunidade de trabalhar tanto de forma independente quanto com equipes de colaboradores.</p>
+        <p>Atualmente, atuo principalmente como Desenvolvedor Web Front End, desde o design de layouts responsivos, até o deploy de aplicações web completamente funcionais, interativas e intuitivas.</p>
       </div>
       <div class="about-grid">
         <div>
@@ -195,12 +197,12 @@
         </div>
       </div>
       <div class="bg-text">
-        <p>About</p>
+        <p>Sobre</p>
       </div>
     </section>
     <section id="skills" class="skills-container">
       <div class="skills-header">
-        <h2>Skills</h2>
+        <h2>Habilidades</h2>
         <i class="fa-solid fa-pen-to-square"></i>
       </div>
       <div class="guide-signs skills-click-sign">
@@ -239,15 +241,15 @@
         </div>
         <div id="languages" class="card">
           <div class="card-front">
-            <h3>Languages</h3>
+            <h3>Línguas</h3>
           </div>
           <div class="card-back">
-            <h4>Languages</h4>
+            <h4>Línguas</h4>
             <ul>
-              <li>Spanish (native)</li>
-              <li>English (fluent)</li>
-              <li>Portuguese (fluent)</li>
-              <li>French (basic)</li>
+              <li>Español (nativo)</li>
+              <li>Inglês (fluente)</li>
+              <li>Português (fluente)</li>
+              <li>Francês (básico)</li>
             </ul>
           </div>
         </div>
@@ -258,25 +260,25 @@
           <div class="card-back">
             <h4>Soft Skills</h4>
             <ul>
-              <li>Creativity</li>
-              <li>Time Management</li>
-              <li>Problem Solving</li>
-              <li>Conflict Resolution</li>
+              <li>Criatividade</li>
+              <li>Gestão de tempo</li>
+              <li>Resolução de Problemas</li>
+              <li>Resolução de Conflitos</li>
             </ul>
           </div>
         </div>
       </div>
       <div class="bg-text">
-        <p>Skills</p>
+        <p>Habilid</p>
       </div>
     </section>
     <section id="portfolio" class="portfolio-container">
-      <h2>Portfolio</h2>
+      <h2>Portfólio</h2>
       <div class="portfolio-text section-text">
         <p>
-          Take a look at some of my most recent projects with links to their respective <strong>GitHub</strong>
-          repositories and deployed web pages. Feel free to navigate them and <strong>let met know</strong> what you
-          think!
+          Dá uma olhada em alguns dos meus projetos mais recentes com seus respectivos repositórios no
+          <strong>GitHub</strong>
+          e sites publicados. Fique à vontade para navegar e <strong>me conta</strong> o que você achou!
         </p>
       </div>
       <div class="guide-signs portfolio-click-sign">
@@ -287,41 +289,41 @@
         <!-- Projects are inserted here -->
       </ul>
       <div class="bg-text">
-        <p>Portfolio</p>
+        <p>Portfólio</p>
       </div>
     </section>
     <section id="contact" class="contact-container">
-      <h2>Contact me</h2>
+      <h2>Contato</h2>
       <div class="contact-text section-text">
         <p>
-          Do you feel like I would be a nice addition to your <strong>team of developers</strong>? Let's talk about it!
+          Acha que eu seria uma boa adição ao seu <strong>time de desenvolvedores</strong>? Vamos falar a respeito!
         </p>
         <p>
-          Do you need a web page for your <strong>business</strong> or would like to update the one you currently have?
-          Call me up!
+          Precisa de um site para o seu <strong>negócio</strong> ou gostaria de atualizar o seu?
+          Me manda uma mensagem!
         </p>
         <p>
-          Are you a developer looking to collaborate on an exciting <strong>new project</strong>? Definitely contact me!
+          Você é um(a) desenvolvedor(a) procurando por alguém para colaborar em um <strong>novo projeto</strong>? Entra em contato!
         </p>
       </div>
       <form action="https://formsubmit.co/d040fa0799e54ff6f28ed5275e48dbfa" method="POST">
         <input type="hidden" name="_next" value="https://github.com/LuisECL">
-        <input type="email" name="email" id="email" placeholder="Email address">
+        <input type="email" name="email" id="email" placeholder="Endereço de email">
         <input type="hidden" name="_subject" value="Portfolio page contact message!">
-        <textarea name="message" id="email-message" cols="30" rows="10" placeholder="Your message"></textarea>
-        <button type="submit">Send</button>
+        <textarea name="message" id="email-message" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+        <button type="submit">Enviar</button>
       </form>
       <div class="guide-signs contact-click-sign">
         <i class="fa-solid fa-arrow-left"></i>
-        <p>You can also check out my social media!</p>
+        <p>Dá uma olhada nas minhas redes sociais!</p>
       </div>
       <div class="bg-text">
-        <p>Contact</p>
+        <p>Contato</p>
       </div>
     </section>
   </main>
   <footer class="credits">
-    <p>Developed by Luis Cárcamo</p>
+    <p>Desenvolvido por Luis Cárcamo</p>
     <div class="credits-icons">
       <a href="https://www.instagram.com/luch094.jpg/" target="_blank">
         <i class="fa-brands fa-instagram"></i>
